fix: authenticate API key filter as real super admin user from MongoDB
The previous implementation set a string principal which caused 500s
on endpoints that cast getPrincipal() to User. Now loads a real super
admin user (configured via APPSMITH_INTERNAL_SERVICE_ACCOUNT_EMAIL)
from MongoDB and caches it after first lookup.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>