@@ -1,7 +1,8 @@
 package com.appsmith.server.filters;
 
+import com.appsmith.server.domains.User;
+import com.appsmith.server.repositories.UserRepository;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.ReactiveSecurityContextHolder;
 import org.springframework.security.core.context.SecurityContextImpl;
 import org.springframework.web.server.ServerWebExchange;
@@ -9,17 +10,22 @@ import org.springframework.web.server.WebFilter;
 import org.springframework.web.server.WebFilterChain;
 import reactor.core.publisher.Mono;
 
-import java.util.List;
+import java.util.Collections;
 
 public class ApiKeyAuthFilter implements WebFilter {
 
     private static final String API_KEY_HEADER = "X-API-Key";
-    private static final String INTERNAL_SERVICE = "INTERNAL_SERVICE";
 
     private final String expectedApiKey;
+    private final UserRepository userRepository;
+    private final String serviceAccountEmail;
 
-    public ApiKeyAuthFilter(String expectedApiKey) {
+    private volatile User cachedServiceUser;
+
+    public ApiKeyAuthFilter(String expectedApiKey, UserRepository userRepository, String serviceAccountEmail) {
         this.expectedApiKey = expectedApiKey;
+        this.userRepository = userRepository;
+        this.serviceAccountEmail = serviceAccountEmail;
     }
 
     @Override
@@ -34,15 +40,27 @@ public class ApiKeyAuthFilter implements WebFilter {
             return chain.filter(exchange);
         }
 
-        UsernamePasswordAuthenticationToken authentication =
-                UsernamePasswordAuthenticationToken.authenticated(
-                        INTERNAL_SERVICE,
-                        null,
-                        List.of(new SimpleGrantedAuthority(INTERNAL_SERVICE)));
+        return getServiceUser()
+                .flatMap(user -> {
+                    UsernamePasswordAuthenticationToken authentication =
+                            UsernamePasswordAuthenticationToken.authenticated(
+                                    user, null, Collections.emptyList());
 
-        SecurityContextImpl securityContext = new SecurityContextImpl(authentication);
+                    SecurityContextImpl securityContext = new SecurityContextImpl(authentication);
 
-        return chain.filter(exchange)
-                .contextWrite(ReactiveSecurityContextHolder.withSecurityContext(Mono.just(securityContext)));
+                    return chain.filter(exchange)
+                            .contextWrite(ReactiveSecurityContextHolder.withSecurityContext(
+                                    Mono.just(securityContext)));
+                })
+                .switchIfEmpty(chain.filter(exchange));
+    }
+
+    private Mono<User> getServiceUser() {
+        if (cachedServiceUser != null) {
+            return Mono.just(cachedServiceUser);
+        }
+
+        return userRepository.findByEmail(serviceAccountEmail)
+                .doOnNext(user -> cachedServiceUser = user);
     }
 }
